feat: add icon credits in about

--- a/manager/src/main/res/layout/activity_main.xml
+++ b/manager/src/main/res/layout/activity_main.xml
@@ -71,6 +71,8 @@
             android:stateListAnimator="@animator/raise"
             android:foreground="?android:attr/selectableItemBackground"
             android:visibility="gone"
+            android:clickable="true"
+            android:focusable="true"
             tools:visibility="visible"
             style="@style/Card">
 
