--- a/manager/src/main/res/layout/dialog_about.xml
+++ b/manager/src/main/res/layout/dialog_about.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,11 +27,19 @@
             android:textAppearance="@android:style/TextAppearance.Material.Body1"/>
 
         <TextView
-            android:id="@+id/version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
-            tools:text="0.2.2"/>
+            android:text="@string/versionName"/>
+
+        <TextView
+            android:id="@+id/icon_credits"
+            android:layout_marginTop="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:textColor="?android:textColorSecondary"
+            tools:text="@string/about_icon_credits"/>
 
     </LinearLayout>
 
