--- a/manager/src/main/res/menu/main.xml
+++ b/manager/src/main/res/menu/main.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"/>
+
+    <item
         android:id="@+id/action_about"
         android:title="@string/action_about"/>
+
 </menu>
