feat(manager): add option for user to choose use which start method

--- a/manager/src/main/res/xml/settings.xml
+++ b/manager/src/main/res/xml/settings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <SwitchPreference
-        android:key="root_use_old"
-        android:title="Alternative method (root)"
-        android:summary="Use old method to start the server, should work on most devices"
-        android:defaultValue="false"/>
+    <SimpleMenuPreference
+        android:key="root_launch_method"
+        android:title="@string/settings_root_launch_method"
+        android:summary="%s"
+        android:entries="@array/root_launch_method"
+        android:entryValues="@array/root_launch_method_value"
+        android:defaultValue="ask"/>
 
 </PreferenceScreen>
