--- a/manager/src/main/res/layout/activity_main.xml
+++ b/manager/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="moe.shizuku.privileged.api.moe.shizuku.manager.MainActivity">
+    tools:context="moe.shizuku.manager.MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
