--- a/manager/src/main/res/layout/activity_apps.xml
+++ b/manager/src/main/res/layout/activity_apps.xml
@@ -2,12 +2,10 @@
 <android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@android:id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="vertical"
-    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-    tools:context="moe.shizuku.privileged.api.moe.shizuku.manager.AppsActivity">
+    app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
 </android.support.v7.widget.RecyclerView>
