--- a/manager/src/main/res/layout/activity_main.xml
+++ b/manager/src/main/res/layout/activity_main.xml
@@ -1,214 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@android:id/list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="moe.shizuku.manager.MainActivity">
+    android:paddingTop="4dp"
+    android:paddingBottom="4dp"
+    android:clipToPadding="false"
+    app:layoutManager="android.support.v7.widget.LinearLayoutManager">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:clipToPadding="false"
-        android:animateLayoutChanges="true"
-        tools:context="rikka.appops.SystemPluginActivity">
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/status"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:focusable="true"
-            android:stateListAnimator="@animator/raise"
-            android:foreground="?android:attr/selectableItemBackground"
-            app:cardCornerRadius="2dp"
-            app:cardElevation="2dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:id="@+id/status_icon"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="24dp"
-                    android:importantForAccessibility="no"
-                    android:src="@drawable/ic_server_error_48dp"
-                    android:background="@color/status_warning"
-                    android:tint="?android:attr/textColorPrimaryInverse"
-                    android:scaleType="center"/>
-
-                <TextView
-                    android:id="@+id/status_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    android:padding="8dp"
-                    android:textColor="@color/status_warning"
-                    android:gravity="center"
-                    android:fontFamily="sans-serif-medium"
-                    android:textSize="16sp"
-                    android:lineSpacingExtra="2dp"
-                    tools:text="Running (version 10)"/>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/apps"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:stateListAnimator="@animator/raise"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:visibility="gone"
-            android:clickable="true"
-            android:focusable="true"
-            tools:visibility="visible"
-            style="@style/Card">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <moe.shizuku.manager.widget.HtmlTextView
-                    android:id="@+id/authorized_apps_count"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="16dp"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    android:textSize="16sp"
-                    android:textAppearance="@android:style/TextAppearance.Material.Body2"
-                    app:textHtml="@string/app_name"/>
-
-                <moe.shizuku.manager.widget.HtmlTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="16dp"
-                    android:textColor="?android:textColorSecondary"
-                    app:textHtml="@string/view_authorized_apps"/>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/root"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            style="@style/Card">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <moe.shizuku.manager.widget.HtmlTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="16dp"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingBottom="16dp"
-                    android:textSize="16sp"
-                    android:textAppearance="@android:style/TextAppearance.Material.Body2"
-                    app:textHtml="@string/start_server_title_root"/>
-
-                <!--<moe.shizuku.manager.widget.HtmlTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="16dp"
-                    android:textColor="?android:textColorSecondary"
-                    app:textHtml="@string/start_server_summary_root"/>-->
-
-                <TextView
-                    android:id="@+id/start"
-                    android:text="@string/server_start"
-                    android:drawableStart="@drawable/ic_server_start_24dp"
-                    style="@style/CardButton"
-                    android:enabled="false"/>
-
-                <TextView
-                    android:id="@+id/restart"
-                    android:text="@string/server_restart"
-                    android:drawableStart="@drawable/ic_server_restart"
-                    style="@style/CardButton"
-                    android:enabled="false"
-                    android:visibility="gone"/>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/adb"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:focusable="true"
-            android:stateListAnimator="@animator/raise"
-            android:background="?android:attr/selectableItemBackground"
-            style="@style/Card">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-                <moe.shizuku.manager.widget.HtmlTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="16dp"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    android:textSize="16sp"
-                    android:textAppearance="@android:style/TextAppearance.Material.Body2"
-                    app:textHtml="@string/start_server_title_adb"/>
-
-                <moe.shizuku.manager.widget.HtmlTextView
-                    android:id="@+id/adb_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:paddingStart="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingTop="4dp"
-                    android:paddingBottom="16dp"
-                    android:textColor="?android:textColorSecondary"
-                    app:textHtml="@string/start_server_summary_adb"/>
-
-                <TextView
-                    android:id="@+id/copy"
-                    android:text="@string/copy_command"
-                    android:drawableStart="@drawable/ic_content_copy_24dp"
-                    style="@style/CardButton"/>
-
-                <TextView
-                    android:id="@+id/send"
-                    android:text="@string/send_command"
-                    android:drawableStart="@drawable/ic_send_24dp"
-                    style="@style/CardButton"/>
-
-            </LinearLayout>
-
-        </android.support.v7.widget.CardView>
-
-    </LinearLayout>
-
-</ScrollView>
+</android.support.v7.widget.RecyclerView>
