--- a/manager/src/main/res/values/styles.xml
+++ b/manager/src/main/res/values/styles.xml
@@ -10,23 +10,15 @@
     </style>
 
     <style name="Card">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
         <item name="android:stateListAnimator">@animator/raise</item>
-        <item name="android:foreground">?android:attr/selectableItemBackground</item>
-        <item name="android:layout_marginBottom">4dp</item>
-        <item name="android:layout_marginTop">4dp</item>
-        <item name="android:layout_marginStart">8dp</item>
-        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
+        <item name="android:layout_marginTop">8dp</item>
         <item name="contentPaddingTop">8dp</item>
         <item name="contentPaddingBottom">8dp</item>
         <item name="cardCornerRadius">2dp</item>
         <item name="cardElevation">2dp</item>
-    </style>
-
-    <style name="Card.ServerStatus" parent="Card">
-        <item name="contentPaddingTop">0dp</item>
-        <item name="contentPaddingBottom">0dp</item>
     </style>
 
     <style name="CardButton">
