--- a/manager/src/main/res/values/strings_permission.xml
+++ b/manager/src/main/res/values/strings_permission.xml
@@ -1,2 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <string name="permission" translatable="false">moe.shizuku.manager.permission.API</string>
+</resources>
