--- a/manager/src/main/res/layout/dialog_shell.xml
+++ b/manager/src/main/res/layout/dialog_shell.xml
@@ -3,12 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@android:id/text1"
+    <HorizontalScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="?android:textColorPrimary"
-        android:fontFamily="monospace"
-        android:padding="24dp"/>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@android:id/text1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="?android:textColorPrimary"
+            android:fontFamily="monospace"
+            android:padding="24dp"
+            android:textIsSelectable="true"/>
+
+    </HorizontalScrollView>
 
 </ScrollView>
