--- a/manager/src/main/res/values/colors.xml
+++ b/manager/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="status_ok">#66BB6A</color>
     <color name="status_warning">#BDBDBD</color>
     <color name="notification">#3F51B5</color>
+    <color name="icon_background">#ff3f51b5</color>
 </resources>
