add instructions for start on boot (start with root)

--- a/manager/src/main/res/layout/item_start_root.xml
+++ b/manager/src/main/res/layout/item_start_root.xml
@@ -16,10 +16,20 @@
             android:paddingTop="16dp"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:paddingBottom="16dp"
             android:textSize="16sp"
             android:textAppearance="@android:style/TextAppearance.Material.Body2"
             app:textHtml="@string/start_server_title_root"/>
+
+        <moe.shizuku.manager.widget.HtmlTextView
+            android:id="@android:id/text1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:textColor="?android:textColorSecondary"
+            app:textHtml="@string/start_server_summary_root"/>
 
         <TextView
             android:id="@android:id/button1"
