finish manager app

--- a/manager/src/main/res/layout/activity_apps.xml
+++ b/manager/src/main/res/layout/activity_apps.xml
@@ -6,6 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scrollbars="vertical"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
 
 </androidx.recyclerview.widget.RecyclerView>
