--- a/manager/src/main/res/menu/main.xml
+++ b/manager/src/main/res/menu/main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
+    <!--<item
         android:id="@+id/action_settings"
-        android:title="@string/action_settings"/>
+        android:title="@string/action_settings"/>-->
 
     <item
         android:id="@+id/action_about"
