--- a/manager/src/main/res/values-v23/arrays.xml
+++ b/manager/src/main/res/values-v23/arrays.xml
@@ -1,30 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <string-array name="night_mode" tools:ignore="InconsistentArrays">
         <item>@string/night_mode_off</item>
         <item>@string/night_mode_on</item>
         <item>@string/night_mode_auto</item>
+        <item>@string/night_mode_follow_system</item>
     </string-array>
 
     <integer-array name="night_mode_value" tools:ignore="InconsistentArrays">
         <item>1</item>
         <item>2</item>
         <item>0</item>
+        <item>-1</item>
     </integer-array>
-
-    <string-array name="language" translatable="false">
-        <item>@string/night_mode_follow_system</item>
-        <item>en-US</item>
-        <item>zh-CN</item>
-        <item>zh-HK</item>
-        <item>zh-TW</item>
-    </string-array>
-
-    <string-array name="language_value" translatable="false">
-        <item>SYSTEM</item>
-        <item>en-US</item>
-        <item>zh-CN</item>
-        <item>zh-HK</item>
-        <item>zh-TW</item>
-    </string-array>
 </resources>
