--- a/manager/src/main/res/values-night/styles.xml
+++ b/manager/src/main/res/values-night/styles.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="AppTheme" parent="Theme"/>
+
     <style name="AppTheme.Apps" parent="AppTheme">
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
 
-    <style name="AppTheme.DayNight" parent="AppTheme"/>
 </resources>
