--- a/manager/src/main/res/values/colors.xml
+++ b/manager/src/main/res/values/colors.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="status_ok">#66BB6A</color>
-    <color name="status_warning">#BDBDBD</color>
     <color name="notification">#3F51B5</color>
     <color name="icon_background">#ff3f51b5</color>
+
+    <color name="background_color_light">#fafafa</color>
+    <color name="accent_color_light">#1a73e8</color>
+
+    <color name="background_color_dark">@color/material_grey_800</color>
+    <color name="accent_color_dark">@color/material_light_blue_100</color>
 </resources>
