--- a/manager/src/main/res/values/attrs.xml
+++ b/manager/src/main/res/values/attrs.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="homeCardStyle" format="reference" />
+    <attr name="appColorPrimary" format="reference" />
 </resources>
