--- a/manager/src/main/res/values/themes.xml
+++ b/manager/src/main/res/values/themes.xml
@@ -6,6 +6,7 @@
         <item name="android:colorAccent">@color/accent_color_light</item>
         <item name="android:colorBackground">@color/background_color_light</item>
         <item name="android:popupTheme">@android:style/ThemeOverlay.Material.Light</item>
+        <item name="appColorPrimary">@color/app_color_light</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
         <item name="homeCardStyle">@style/Card.Light</item>
     </style>
@@ -16,6 +17,7 @@
         <item name="android:colorAccent">@color/accent_color_dark</item>
         <item name="android:colorBackground">@color/background_color_dark</item>
         <item name="android:popupTheme">@android:style/ThemeOverlay.Material.Dark.ActionBar</item>
+        <item name="appColorPrimary">@color/app_color_dark</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
         <item name="homeCardStyle">@style/Card</item>
     </style>
