Update icon style
Signed-off-by: Fung Gwo <fython@163.com>

--- a/manager/src/main/res/layout/item_home_manage_apps.xml
+++ b/manager/src/main/res/layout/item_home_manage_apps.xml
@@ -5,21 +5,19 @@
     android:orientation="horizontal"
     style="?homeCardStyle">
 
-    <ImageView
+    <moe.shizuku.manager.widget.MaterialCircleIconView
         android:id="@android:id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
-        android:src="@drawable/ic_manage_apps_24dp"
-        android:tint="?appColorPrimary"
-        android:tintMode="src_in"
-        android:scaleType="center"
-        android:duplicateParentState="true" />
+        android:src="@drawable/ic_settings_outline_24dp"
+        android:duplicateParentState="true"
+        app:iconColorName="indigo"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         android:orientation="vertical"
         android:duplicateParentState="true">
 
