--- a/manager/src/main/res/values-night/styles.xml
+++ b/manager/src/main/res/values-night/styles.xml
@@ -6,4 +6,6 @@
         <item name="android:windowBackground">?android:colorBackground</item>
     </style>
 
+    <style name="Widget.MaterialCircleIconView.DayNight" parent="Widget.MaterialCircleIconView.Dark"/>
+
 </resources>
