--- a/manager/src/main/res/drawable/ic_play_arrow_outline_24dp.xml
+++ b/manager/src/main/res/drawable/ic_play_arrow_outline_24dp.xml
@@ -6,5 +6,5 @@
         android:tint="?android:attr/colorControlNormal">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M4.01,6.03l7.51,3.22 -7.52,-1 0.01,-2.22m7.5,8.72L4,17.97v-2.22l7.51,-1M2.01,3L2,10l15,2 -15,2 0.01,7L23,12 2.01,3z"/>
+        android:pathData="M10,8.64L15.27,12 10,15.36V8.64M8,5v14l11,-7L8,5z"/>
 </vector>
