--- a/manager/src/main/res/layout/item_home_server_status.xml
+++ b/manager/src/main/res/layout/item_home_server_status.xml
@@ -6,14 +6,12 @@
     android:orientation="horizontal"
     style="?homeCardStyle">
 
-    <ImageView
+    <moe.shizuku.manager.widget.MaterialCircleIconView
         android:id="@android:id/icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:importantForAccessibility="no"
-        android:src="@drawable/ic_server_error_24dp"
-        android:tintMode="src_in"
-        android:scaleType="center" />
+        android:src="@drawable/ic_server_error_24dp" />
 
     <moe.shizuku.support.widget.HtmlCompatTextView
         android:id="@android:id/text1"
